feat: added time utilities

--- a/include/reborn/CMakeLists.txt
+++ b/include/reborn/CMakeLists.txt
@@ -8,3 +8,4 @@ target_sources(libreborn PRIVATE characters.h iterator.h strings.h memory.h type
 
 add_subdirectory(concurrency)
 add_subdirectory(format)
+add_subdirectory(time)
