--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(concurrency)
 add_subdirectory(filesystem)
 add_subdirectory(format)
 add_subdirectory(memory)
+add_subdirectory(time)
