--- a/include/reborn/CMakeLists.txt
+++ b/include/reborn/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # MIT Licence
 # Copyright (c) 2022 Corentin Godeau (@Corendos)
-# More details a https://github.com/Corendos/Reborn
+# More details at https://github.com/Corendos/Reborn
 #
 
 target_sources(libreborn PRIVATE characters.h iterator.h strings.h memory.h types.h math.h)
