--- a/src/memory/CMakeLists.txt
+++ b/src/memory/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # MIT Licence
 # Copyright (c) 2022 Corentin Godeau (@Corendos)
-# More details a https://github.com/Corendos/Reborn
+# More details at https://github.com/Corendos/Reborn
 #
 
 target_sources(libreborn PRIVATE allocator.cpp allocator/arena.cpp arena.cpp buffer.cpp)
