--- a/src/time/CMakeLists.txt
+++ b/src/time/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 # MIT Licence
 # Copyright (c) 2022 Corentin Godeau (@Corendos)
-# More details a https://github.com/Corendos/Reborn
+# More details at https://github.com/Corendos/Reborn
 #
 
 target_sources(libreborn PRIVATE clock.cpp)
